Added some simple unit tests.